--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -17,13 +17,14 @@
         "@types/node": "^20.9.0",
         "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
+        "jsonschema": "^1.4.1",
         "typescript": "^5.2.2"
     },
     "peerDependencies": {
         "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "jsonschema": "^1.4.1"
     }
 }
-
