fix(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
         "Gaulli",
         "gdocid",
         "github",
+        "grafico",
         "Guanyin",
         "henrique",
         "Hessel",
