--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -20,12 +20,14 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "watch": "pnpm build --watch",
-        "watch:styles": "pnpm build:styles --watch"
+        "watch:styles": "pnpm build:styles --watch",
+        "clean": "rm -rf dist/*"
     },
     "dependencies": {
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-popover": "^1.0.7",
-        "lodash-es": "^4.17.21"
+        "lodash-es": "^4.17.21",
+        "react-hook-form": "^7.48.2"
     },
     "devDependencies": {
         "@elucidario/pkg-types": "workspace:^",
