--- a/tools/parse-args/tsconfig.json
+++ b/tools/parse-args/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["@elucidario/pkg-tsconfig"],
+    "extends": ["@elucidario/tool-tsconfig"],
     "compilerOptions": {
         "outDir": "dist",
         "rootDir": "src",
