--- a/packages/mdorim/package.json
+++ b/packages/mdorim/package.json
@@ -25,9 +25,9 @@
         "translations"
     ],
     "scripts": {
-        "build": "pnpm clean:lib && pnpm build:types && pnpm build:script -c -s -e -t -d -l && pnpm test",
+        "build": "pnpm clean:lib && pnpm build:types && pnpm build:script && pnpm test",
         "build:rollup": "rollup -c",
-        "build:script": "node src/build/build.js",
+        "build:script": "node src/build/build.js -c -s -e -t -d -l",
         "build:types": "tsc --emitDeclarationOnly --declarationDir \"lib/types\"",
         "clean:docs": "rm -rf docs/*",
         "clean:lib": "rm -rf lib/*",
@@ -48,10 +48,10 @@
         "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
         "@elucidario/pkg-pub-gen": "workspace:^",
-        "@elucidario/pkg-rollup": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
-        "@elucidario/pkg-tsconfig": "workspace:^",
         "@elucidario/pkg-types": "workspace:^",
+        "@elucidario/tool-rollup": "workspace:^",
+        "@elucidario/tool-tsconfig": "workspace:^",
         "@types/node": "^20.9.0",
         "child_process": "^1.0.2",
         "commander": "^10.0.1",
