--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,12 +8,13 @@
     "main": "",
     "types": "dist/index.d.ts",
     "scripts": {
-        "build": "pnpm clear && tsc",
+        "build": "tsc",
+        "build:clear": "pnpm clear && pnpm build",
         "clear": "rm -rf dist/*",
-        "dev": "pnpm clear && tsc -w"
+        "dev": "pnpm clear && pnpm build -- -w"
     },
     "devDependencies": {
-        "@elucidario/pkg-tsconfig": "workspace:^",
+        "@elucidario/tool-tsconfig": "workspace:^",
         "@types/node": "^20.9.0",
         "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
@@ -23,8 +24,8 @@
     "peerDependencies": {
         "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
+        "jsonschema": "^1.4.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "jsonschema": "^1.4.1"
+        "react-dom": "^18.2.0"
     }
 }
