--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -21,8 +21,8 @@
 		"chalk": "^5.2.0"
 	},
 	"devDependencies": {
-		"@elucidario/pkg-rollup": "workspace:^",
-		"@elucidario/pkg-tsconfig": "workspace:^",
+		"@elucidario/tool-rollup": "workspace:^",
+		"@elucidario/tool-tsconfig": "workspace:^",
 		"@elucidario/pkg-types": "workspace:^",
 		"@vdemedes/prettier-config": "^2.0.1",
 		"eslint-plugin-react": "^7.32.2",
