--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,8 @@
 {
-    "extends": "@elucidario/pkg-tsconfig",
+    "extends": "@elucidario/tool-tsconfig",
     "compilerOptions": {
         "resolveJsonModule": true,
         "outDir": "dist"
     },
-    "include": ["src/js/index.ts"]
+    "include": ["src/ts/index.ts"]
 }
