chore(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -133,6 +133,7 @@
         "phpdocumentor",
         "phpdox",
         "phpunit",
+        "PPGCI",
         "principios",
         "profesionales",
         "retrocycle",
@@ -148,6 +149,7 @@
         "sparql",
         "sporny",
         "squizlabs",
+        "stringfy",
         "Tagliaferro",
         "tailwindcss",
         "tarsila",
