--- a/packages/pub-gen/package.json
+++ b/packages/pub-gen/package.json
@@ -17,76 +17,75 @@
     },
     "type": "module",
     "main": "lib/index.js",
-    "config": {
-        "schema-version": "1.0.0"
-    },
     "bin": {
         "pub-gen": "./bin/pub-gen.js"
     },
     "scripts": {
-        "build": " pnpm clean:dist && pnpm clean:docs && node bin/build.js -l pt-BR && pnpm test",
+        "build": "node bin/build.js -l pt-BR",
+        "build:clean": " pnpm clean && pnpm build",
+        "build:test": " pnpm build && pnpm test",
+        "clean": "pnpm clean:dist && pnpm clean:docs",
         "clean:dist": "rm -rf ./static/*",
         "clean:docs": "rm -rf ./docs/*",
-        "dev": "pnpm clean:dist && pnpm clean:docs && node bin/build.js -w -l pt-BR",
+        "dev": "pnpm clean && pnpm build",
         "pandoc-template": "pandoc -o template/docx/reference.docx --print-default-data-file reference.docx",
         "pub-gen": "node ./index.js",
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
         "test:cov": "pnpm test -- --coverage --coverageDirectory=\"tests/coverage\""
     },
+    "config": {
+        "schema-version": "1.0.0"
+    },
     "dependencies": {
-        "@apidevtools/json-schema-ref-parser": "^10.1.0",
-        "@babel/core": "^7.21.8",
+        "@apidevtools/json-schema-ref-parser": "^11.1.0",
+        "@babel/core": "^7.23.6",
         "@benrbray/remark-cite": "^1.1.0",
         "@elucidario/pkg-console": "workspace:^",
         "@elucidario/pkg-docusaurus-md": "workspace:^",
         "@elucidario/pkg-g-api-utils": "workspace:^",
-        "@elucidario/pkg-parse-args": "workspace:^",
         "@elucidario/pkg-schema-doc": "workspace:^",
         "@elucidario/pkg-schema-validator": "workspace:^",
-        "ajv": "^8.12.0",
-        "axios": "^1.4.0",
-        "babel-plugin-transform-import-meta": "^2.2.0",
-        "chalk": "^5.2.0",
+        "@elucidario/pkg-unist": "workspace:^",
+        "axios": "^1.6.2",
+        "babel-plugin-transform-import-meta": "^2.2.1",
         "child_process": "^1.0.2",
         "chokidar": "^3.5.3",
         "citeproc": "^2.4.63",
-        "commander": "^10.0.1",
-        "dotenv": "^16.1.4",
-        "fs": "0.0.1-security",
+        "commander": "^11.1.0",
+        "dotenv": "^16.3.1",
         "i18n": "^0.15.1",
-        "inquirer": "^9.2.5",
+        "inquirer": "^9.2.12",
         "js-search": "^2.0.1",
-        "jsdom": "^22.0.0",
-        "json-schema": "^0.4.0",
         "lodash-es": "^4.17.21",
+        "mdast-util-from-markdown": "^2.0.0",
         "node-html-markdown": "^1.3.0",
-        "object-hash": "^3.0.0",
-        "octokit": "^2.0.16",
+        "octokit": "^3.1.2",
         "parser-front-matter": "^1.6.4",
-        "path": "^0.12.7",
-        "prettier": "^2.8.8",
+        "prettier": "^3.1.1",
         "rehype-parse": "^8.0.4",
         "remark": "^14.0.3",
         "remark-docx": "^0.1.3",
         "remark-frontmatter": "^4.0.1",
         "remark-gfm": "^3.0.1",
         "remark-parse": "^10.0.2",
-        "remark-prettier": "^2.0.0",
         "remark-stringify": "^10.0.3",
-        "simple-git": "^3.19.0",
+        "simple-git": "^3.21.0",
         "tableschema": "^1.12.6",
         "unified": "^10.1.2",
+        "unified-prettier": "^2.0.0",
         "unified-stream": "^2.0.0",
-        "unist-util-visit": "^4.1.2"
+        "unist-builder": "^4.0.0",
+        "unist-util-visit": "^4.1.2",
+        "unist-util-visit-parents": "^6.0.1"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.21.8",
-        "@babel/plugin-syntax-import-assertions": "^7.20.0",
-        "@babel/plugin-syntax-import-attributes": "^7.22.5",
+        "@babel/eslint-parser": "^7.23.3",
+        "@babel/plugin-syntax-import-assertions": "^7.23.3",
+        "@babel/plugin-syntax-import-attributes": "^7.23.3",
         "@babel/plugin-syntax-import-meta": "^7.10.4",
-        "@babel/preset-env": "^7.21.5",
+        "@babel/preset-env": "^7.23.6",
         "@elucidario/pkg-paths": "workspace:^",
-        "babel-jest": "^29.5.0",
-        "jest": "^29.5.0"
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0"
     }
 }
