--- a/packages/mdorim/tsconfig.json
+++ b/packages/mdorim/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "extends": "@elucidario/tool-tsconfig",
     "compilerOptions": {
-        "rootDir": ".",
-        "baseUrl": ".",
         "target": "ES2020",
-        "outDir": "lib",
         "resolveJsonModule": true,
         "moduleResolution": "bundler",
+
+        "emitDeclarationOnly": true,
+        "declarationDir": "lib/types",
 
         "types": ["@elucidario/pkg-types", "@elucidario/pkg-paths"],
 
@@ -19,5 +19,5 @@
             ]
         }
     },
-    "include": ["src/lib/**/*.ts"]
+    "include": ["src/lib/index.ts"]
 }
