chore(workspace): workspace files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "cSpell.words": [
         "ABSPATH",
         "Albrechtsen",
+        "apendice",
         "apresentacao",
         "Athanasios",
         "Auguste",
@@ -25,6 +26,7 @@
         "AUTOINCREMENT",
         "autoload",
         "automattic",
+        "avaliacao",
         "Baciccio",
         "Bardi",
         "Battista",
@@ -36,6 +38,7 @@
         "botallo",
         "buckland",
         "catalogacao",
+        "catalografica",
         "Cavalcanti",
         "CDWA",
         "cetic",
@@ -49,6 +52,7 @@
         "colspan",
         "comite",
         "comunicacao",
+        "conclusao",
         "consideracoes",
         "dashicons",
         "datetime",
@@ -81,7 +85,9 @@
         "Gaulli",
         "gdocid",
         "github",
+        "glossario",
         "grafico",
+        "graficos",
         "Guanyin",
         "henrique",
         "Hessel",
@@ -143,6 +149,7 @@
         "saracevic",
         "Segall",
         "semantica",
+        "simbolos",
         "sistematizacion",
         "somewordpress",
         "Sotheby’s",
@@ -169,6 +176,7 @@
         "varchar",
         "vega",
         "Velios",
+        "vernacula",
         "vipwpcs",
         "vocabularios",
         "WALDROP",
