--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -1,34 +1,36 @@
 {
-	"name": "@elucidario/pkg-console",
-	"version": "0.2.1",
-	"license": "MIT",
-	"type": "module",
-	"main": "dist/mjs/index.min.mjs",
-	"exports": {
-		".": {
-			"types": "./dist/types/index.d.ts",
-			"import": "./dist/mjs/index.min.mjs",
-			"require": "./dist/cjs/index.min.cjs"
-		}
-	},
-	"scripts": {
-		"build": "pnpm clean && tsc && rollup -c",
-		"clean": "rm -rf dist/*",
-		"dev": "pnpm build -w"
-	},
-	"prettier": "@vdemedes/prettier-config",
-	"dependencies": {
-		"chalk": "^5.2.0"
-	},
-	"devDependencies": {
-		"@elucidario/tool-rollup": "workspace:^",
-		"@elucidario/tool-tsconfig": "workspace:^",
-		"@elucidario/pkg-types": "workspace:^",
-		"@vdemedes/prettier-config": "^2.0.1",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"rollup": "^4.6.0",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.0.3"
-	}
+    "name": "@elucidario/pkg-console",
+    "version": "0.2.1",
+    "license": "MIT",
+    "type": "module",
+    "main": "dist/mjs/index.min.mjs",
+    "exports": {
+        ".": {
+            "types": "./dist/types/index.d.ts",
+            "import": "./dist/mjs/index.min.mjs",
+            "require": "./dist/cjs/index.min.cjs"
+        }
+    },
+    "scripts": {
+        "build": "pnpm clean && tsc && rollup -c",
+        "clean": "rm -rf dist/*",
+        "dev": "pnpm build -w"
+    },
+    "dependencies": {
+        "chalk": "^5.3.0"
+    },
+    "devDependencies": {
+        "@babel/plugin-syntax-import-attributes": "^7.23.3",
+        "@babel/plugin-transform-json-strings": "^7.23.4",
+        "@babel/preset-env": "^7.23.6",
+        "@elucidario/pkg-types": "workspace:^",
+        "@elucidario/tool-rollup": "workspace:^",
+        "@elucidario/tool-tsconfig": "workspace:^",
+        "@vdemedes/prettier-config": "^2.0.1",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "rollup": "^4.9.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
+    }
 }
