--- a/packages/schema-doc/package.json
+++ b/packages/schema-doc/package.json
@@ -1,47 +1,57 @@
 {
-  "name": "@elucidario/pkg-schema-doc",
-  "version": "0.2.1",
-  "description": "",
-  "keywords": [],
-  "license": "ISC",
-  "author": "",
-  "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "pnpm clear-build && pnpm test",
-    "clear": "rm -rf dist/*",
-    "clear-build": "pnpm clear && rollup -c",
-    "dev": "pnpm clear-build -w --environment BUILD:development",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
-  },
-  "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "^10.1.0",
-    "@elucidario/pkg-console": "workspace:^",
-    "@elucidario/pkg-docusaurus-md": "workspace:^",
-    "@elucidario/pkg-paths": "workspace:^",
-    "chalk": "^5.3.0",
-    "esm": "^3.2.25",
-    "fs": "0.0.1-security",
-    "i18n": "^0.15.1",
-    "lodash-es": "^4.17.21",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "@elucidario/pkg-rollup": "workspace:^",
-    "@elucidario/pkg-tsconfig": "workspace:^",
-    "@elucidario/pkg-types": "workspace:^",
-    "@jest/globals": "^29.6.1",
-    "@rollup/plugin-typescript": "^11.1.2",
-    "@types/esm": "^3.2.0",
-    "@types/i18n": "^0.13.6",
-    "@types/json-schema": "^7.0.12",
-    "@types/lodash-es": "^4.17.7",
-    "@types/node": "^20.4.1",
-    "babel-jest": "^29.6.1",
-    "jest": "^29.6.1",
-    "rollup": "^3.26.2",
-    "ts-jest": "^29.1.1",
-    "url": "^0.11.1"
-  }
+    "name": "@elucidario/pkg-schema-doc",
+    "version": "0.2.1",
+    "description": "",
+    "keywords": [],
+    "license": "MIT",
+    "author": "",
+    "type": "module",
+    "exports": {
+        ".": {
+            "types": "./dist/types/index.d.ts",
+            "import": "./dist/mjs/index.min.mjs",
+            "require": "./dist/cjs/index.min.cjs"
+        }
+    },
+    "main": "./dist/mjs/index.min.mjs",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "build": "tsc && rollup -c",
+        "build:clear": "pnpm clear && pnpm build",
+        "build:test": "pnpm build:clear && pnpm test",
+        "clear": "rm -rf dist/*",
+        "dev": "pnpm build:clear -w --environment BUILD:development",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
+        "test:cov": "pnpm test -- --coverage --coverageDirectory=\"tests/coverage\""
+    },
+    "dependencies": {
+        "@apidevtools/json-schema-ref-parser": "^10.1.0",
+        "@elucidario/pkg-console": "workspace:^",
+        "@elucidario/pkg-docusaurus-md": "workspace:^",
+        "@elucidario/pkg-paths": "workspace:^",
+        "chalk": "^5.3.0",
+        "i18n": "^0.15.1",
+        "lodash-es": "^4.17.21"
+    },
+    "devDependencies": {
+        "@babel/plugin-syntax-import-attributes": "^7.23.3",
+        "@babel/plugin-transform-json-strings": "^7.23.4",
+        "@babel/preset-env": "^7.23.6",
+        "@elucidario/pkg-types": "workspace:^",
+        "@elucidario/tool-rollup": "workspace:^",
+        "@elucidario/tool-tsconfig": "workspace:^",
+        "@rollup/plugin-typescript": "^11.1.5",
+        "@types/i18n": "^0.13.10",
+        "@types/json-schema": "^7.0.15",
+        "@types/lodash-es": "^4.17.12",
+        "@types/node": "^20.10.4",
+        "babel-jest": "^29.7.0",
+        "jest": "^29.7.0",
+        "rollup": "^3.29.4"
+    },
+    "peerDependencies": {
+        "@elucidario/pkg-paths": "workspace:^"
+    }
 }
