--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -11,15 +11,15 @@
         "build": "tsc",
         "build:clear": "pnpm clear && pnpm build",
         "clear": "rm -rf dist/*",
-        "dev": "pnpm clear && pnpm build -- -w"
+        "dev": "pnpm build:clear -w"
     },
     "devDependencies": {
         "@elucidario/tool-tsconfig": "workspace:^",
-        "@types/node": "^20.9.0",
-        "@types/react": "^18.2.37",
-        "@types/react-dom": "^18.2.15",
+        "@types/node": "^20.10.4",
+        "@types/react": "^18.2.45",
+        "@types/react-dom": "^18.2.17",
         "jsonschema": "^1.4.1",
-        "typescript": "^5.2.2"
+        "typescript": "^5.3.3"
     },
     "peerDependencies": {
         "@types/react": "^18.2.37",
