chore(workspace): spell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,7 @@
         "codigo",
         "colspan",
         "comite",
+        "commonmark",
         "comunicacao",
         "conclusao",
         "consideracoes",
@@ -121,6 +122,7 @@
         "MASP",
         "MASTERMANN",
         "Mattos",
+        "micromark",
         "mofile",
         "museologica",
         "museologist",
