fix(correções): introdução, metodologia e resumo-lingua-vernacula

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "droettboom",
         "embeddable",
         "Emmanuelle",
+        "ENANCIB",
         "epistemologicas",
         "estructurados",
         "etica",
@@ -98,6 +99,7 @@
         "Hjorland",
         "HJORLAND",
         "hykes",
+        "IBRAM",
         "icom",
         "ilustracoes",
         "informacao",
