--- a/tools/tsconfig/tsconfig.json
+++ b/tools/tsconfig/tsconfig.json
@@ -8,5 +8,5 @@
         "esModuleInterop": true,
         "skipLibCheck": true
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "**/*.test.ts", "**/*.spec.ts"]
 }
