--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,7 @@
         "klabin",
         "Kornwachs",
         "Kosuth",
+        "Ladkin",
         "Lasar",
         "lcdr",
         "localizacao",
