chore(dissertacao-mestrado) 0.8.1 normatização + revisão

--- a/publications/dissertacao-mestrado/package.json
+++ b/publications/dissertacao-mestrado/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@elucidario/pub-dissertacao-mestrado",
-    "version": "0.7.1-alpha.0",
+    "version": "0.8.1",
     "main": "README.md",
     "private": true,
     "scripts": {
