--- a/apps/lcdr-docs/package.json
+++ b/apps/lcdr-docs/package.json
@@ -39,6 +39,7 @@
     },
     "devDependencies": {
         "@docusaurus/tsconfig": "3.0.0",
+        "@tsconfig/docusaurus": "^2.0.2",
         "@types/node": "^18.19.3",
         "@types/react": "^18.2.45",
         "typescript": "^5.3.3"
