--- a/tools/rollup/package.json
+++ b/tools/rollup/package.json
@@ -11,6 +11,7 @@
         "@rollup/plugin-typescript": "^11.1.5",
         "lodash": "^4.17.21",
         "rollup": "^3.29.4",
+        "rollup-plugin-wp-resolve": "^1.0.9",
         "typescript": "^5.3.3"
     }
 }
