chore(core): format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,7 @@
         "hykes",
         "IBRAM",
         "icom",
+        "iife",
         "ilustracoes",
         "informacao",
         "informacion",
