fix(workspace): readme header

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -162,6 +162,7 @@
         "sparql",
         "sporny",
         "squizlabs",
+        "srcset",
         "stringfy",
         "Tagliaferro",
         "tailwindcss",
