--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "build": "lerna run build:clean --stream",
-        "build:app": "pnpm build -- --scope '@elucidario/app-*'",
-        "build:pkg": "pnpm build -- --scope '@elucidario/pkg-*'",
-        "build:pub": "pnpm build -- --scope '@elucidario/pub-*'",
-        "build:tool": "pnpm build -- --scope '@elucidario/tool-*'",
+        "build": "lerna run build --stream",
+        "build:app": "lerna run build --scope '@elucidario/app-*'",
+        "build:pkg": "lerna run build --scope '@elucidario/pkg-*'",
+        "build:pub": "lerna run build --scope '@elucidario/pub-*'",
+        "build:tool": "lerna run build --scope '@elucidario/tool-*'",
+        "build:workspace": "lerna run build --ignore '@elucidario/pub-*'",
         "clean": "lerna clean",
         "commit": "cz",
         "commit:no-verify": "pnpm commit --no-verify",
