--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -14,7 +14,7 @@
         "dist"
     ],
     "scripts": {
-        "build": "tsc && vite build",
+        "build": "tsc && build:styles && vite build",
         "build:styles": "tailwindcss -i ./lib/input.css -o ./dist/output.css",
         "dev": "vite",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
