fix(schema-doc): implementa ts-jest

--- a/packages/schema-doc/jest.config.json
+++ b/packages/schema-doc/jest.config.json
@@ -1,4 +1,17 @@
 {
     "roots": ["."],
-    "modulePathIgnorePatterns": ["<rootDir>/dist/", "<rootDir>/node_modules/"]
+    "modulePathIgnorePatterns": ["<rootDir>/dist/", "<rootDir>/node_modules/"],
+    "preset": "ts-jest",
+    "extensionsToTreatAsEsm": [".ts"],
+    "moduleNameMapper": {
+        "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "transform": {
+        "^.+\\.tsx?$": [
+            "ts-jest",
+            {
+                "useESM": true
+            }
+        ]
+    }
 }
