--- a/packages/schema-doc/package.json
+++ b/packages/schema-doc/package.json
@@ -33,23 +33,28 @@
         "@elucidario/pkg-paths": "workspace:^",
         "chalk": "^5.3.0",
         "i18n": "^0.15.1",
+        "ky": "^1.2.0",
         "lodash-es": "^4.17.21"
     },
     "devDependencies": {
         "@babel/plugin-syntax-import-attributes": "^7.23.3",
         "@babel/plugin-transform-json-strings": "^7.23.4",
-        "@babel/preset-env": "^7.23.6",
+        "@babel/preset-env": "^7.23.9",
         "@elucidario/pkg-types": "workspace:^",
         "@elucidario/tool-rollup": "workspace:^",
         "@elucidario/tool-tsconfig": "workspace:^",
-        "@rollup/plugin-typescript": "^11.1.5",
+        "@jest/globals": "^29.7.0",
+        "@rollup/plugin-typescript": "^11.1.6",
         "@types/i18n": "^0.13.10",
+        "@types/jest": "^29.5.12",
         "@types/json-schema": "^7.0.15",
         "@types/lodash-es": "^4.17.12",
-        "@types/node": "^20.10.4",
+        "@types/node": "^20.11.19",
         "babel-jest": "^29.7.0",
         "jest": "^29.7.0",
-        "rollup": "^3.29.4"
+        "rollup": "^3.29.4",
+        "ts-jest": "^29.1.2",
+        "typescript": "^5.3.3"
     },
     "peerDependencies": {
         "@elucidario/pkg-paths": "workspace:^"
