--- a/packages/schema-doc/tsconfig.json
+++ b/packages/schema-doc/tsconfig.json
@@ -3,26 +3,31 @@
     "compilerOptions": {
         "baseUrl": ".",
         "outDir": "dist",
-        "target": "ESNext",
-        "module": "ESNext",
+        "target": "ES6",
+        "module": "ES6",
+        "moduleResolution": "Node",
+        "allowSyntheticDefaultImports": true,
+        "allowImportingTsExtensions": true,
         "declaration": true,
         "emitDeclarationOnly": true,
         "declarationDir": "dist/types",
         "paths": {
             "@elucidario/pkg-types": [
-                "node_modules/@elucidario/pkg-types/dist"
-            ],
-            "@elucidario/pkg-docusaurus-md": [
-                "node_modules/@elucidario/pkg-docusaurus-md/dist"
+                "node_modules/@elucidario/pkg-types/dist/index.d.ts",
             ],
             "@elucidario/pkg-console": [
-                "node_modules/@elucidario/pkg-console/dist/types"
+                "node_modules/@elucidario/pkg-console/dist/types/index.d.ts",
             ],
             "@elucidario/pkg-paths": [
-                "node_modules/@elucidario/pkg-paths/dist/types"
-            ]
-        }
+                "node_modules/@elucidario/pkg-paths/dist/types/index.d.ts",
+            ],
+        },
+        "types": [
+            "./node_modules/@elucidario/pkg-console/dist/types/index.d.ts",
+            "./node_modules/@elucidario/pkg-paths/dist/types/index.d.ts",
+            "./node_modules/@elucidario/pkg-types/dist/index.d.ts",
+        ],
     },
-    "include": ["src/index.ts"],
-    "exclude": ["node_modules", "dist"]
+    "include": ["src/index.ts", "./tests"],
+    "exclude": ["node_modules", "dist"],
 }
